Update ee.java